--- a/index.html
+++ b/index.html
@@ -2,11 +2,49 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
+    <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
+    <title>Седона</title>
+    <!--<style>
+            h1 {
+                font-size: 28px;
+                font-family: Monaco, Courier, monospace;
+                color: #618ad2;
+            }
+        </style>-->
+
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+    <nav class="main-navigation">
+            <a class="main-header-logo">
+              <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
+            </a>
+            <ul class="site-navigation">
+              <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
+              <li><a href="news.html">ФОТО И ВИДЕО</a></li>
+              <li><a href="price.html">КАРТА ШТАТА</a></li>
+              <li><a href="catalog.html">ГОСТИНИЦЫ</a></li>
+            </ul>
+          </nav>
 
-  </body>
+<h1>НАСТОЯЩИЙ ГОРОДОК</h1>
+    <p>— №1 —</p>
+    <p>СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+
+    <h1>ТАМ ЕСТЬ Мост дьявола</h1>
+    <p>— №2 —</p>
+    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+
+    <h1>НЕБОЛЬШАЯ ПЛОЩАДЬ</h1>
+    <p>— №3 —</p>
+    <p>ВСЕ достопримеча-тельности находятся очень близко</p>
+
+    <h1>КРАСИВАЯ ДОРОГА</h1>
+    <p>— №4 —</p>
+    <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
+
+    <h1>МАЛО ТУРИСТОВ</h1>
+    <p>— №5 —</p>
+    <p>Большинство едет в гранд каньон и толпится там</p>
 </html>
