добавление футера и формы

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </ul>
           </nav>
 
+<section>
 <h1>НАСТОЯЩИЙ ГОРОДОК</h1>
     <p>— №1 —</p>
     <p>СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
@@ -47,4 +48,15 @@
     <h1>МАЛО ТУРИСТОВ</h1>
     <p>— №5 —</p>
     <p>Большинство едет в гранд каньон и толпится там</p>
-</html>
+</section>
+
+<section class="appointment">
+        <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+        <!-- Здесь будет форма -->
+      </section>
+
+<footer>
+
+</footer>
+</body>
