картинки мост и городок

--- a/index.html
+++ b/index.html
@@ -5,21 +5,13 @@
     <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
     <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
     <title>Седона</title>
-    <!--<style>
-            h1 {
-                font-size: 28px;
-                font-family: Monaco, Courier, monospace;
-                color: #618ad2;
-            }
-        </style>-->
-
   </head>
   <body>
-
+  <header class="main-header">
+    <a class="main-header-logo">
+      <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
+    </a>
     <nav class="main-navigation">
-            <a class="main-header-logo">
-              <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
-            </a>
             <ul class="site-navigation">
               <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
               <li><a href="news.html">ФОТО И ВИДЕО</a></li>
@@ -27,34 +19,82 @@
               <li><a href="catalog.html">ГОСТИНИЦЫ</a></li>
             </ul>
           </nav>
+  </header>
+<article>
+<h1> СЕДОНА </h1>
+<p><b> СЕДОНА— небольшой городок в АРИЗОНЕ,
+зАСЛУЖИвающий большего!</b></p>
+</article>
 
-<section>
-<h1>НАСТОЯЩИЙ ГОРОДОК</h1>
-    <p>— №1 —</p>
+<h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!<h2>
+
+<section class="advantage-item">
+  <div class="item-content town">
+    <h3 class="caption">НАСТОЯЩИЙ ГОРОДОК</h3>
+    <span>— №1 —</span>
     <p>СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-
-    <h1>ТАМ ЕСТЬ Мост дьявола</h1>
-    <p>— №2 —</p>
-    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-
-    <h1>НЕБОЛЬШАЯ ПЛОЩАДЬ</h1>
-    <p>— №3 —</p>
-    <p>ВСЕ достопримеча-тельности находятся очень близко</p>
-
-    <h1>КРАСИВАЯ ДОРОГА</h1>
-    <p>— №4 —</p>
-    <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!</p>
-
-    <h1>МАЛО ТУРИСТОВ</h1>
-    <p>— №5 —</p>
-    <p>Большинство едет в гранд каньон и толпится там</p>
+  </div>
+  <img. scr="img/town.jpg" alt="Настоящий городок" width="800" height="256">
 </section>
+
+<section class="advantage-service">
+<ul>
+  <li class "service-item housing">
+    <h3>Жилье</h3>
+    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!<p>
+  </li>
+  <li class "service-item food">
+    <h3>Еда</h3>
+    <p>Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!<p>
+  </li>
+  <li class "service-item souvenir">
+    <h3>Сувениры</h3>
+    <p>Не только китайского, но и местного производства!<p>
+  </li>
+</ul>
+</section>
+
+<section class="advantage-item">
+  <img. scr="img/bridge.jpg" alt="Мост дьявола" width="800" height="256">
+  <div class="item-content bridge">
+    <h3 class="caption">ТАМ ЕСТЬ Мост дьявола</h3>
+    <span>— №2 —</span>
+    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+  </div>
+</section>
+
+<section class="advantage-item-2">
+  <ul>
+    <li class "item-content square">
+      <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+      <span>— №3 —</span>
+      <p>ВСЕ достопримечательности находятся очень близко<p>
+    </li>
+    <li class "item-content road">
+      <h3>КРАСИВАЯ ДОРОГА</h3>
+      <span>— №4 —</span>
+      <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!<p>
+    </li>
+    <li class "item-content road">
+      <h3>МАЛО ТУРИСТОВ</h3>
+      <span>— №5 —</span>
+      <p>Большинство едет в гранд каньон и толпится там<p>
+    </li>
+  </ul>
+</section>
+
 
 <section class="appointment">
         <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
         <!-- Здесь будет форма -->
       </section>
+
+      <section class="appointment">
+              <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
+              <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+              <!-- Здесь будет форма -->
+            </section>
 
 <footer>
 
