--- a/index.html
+++ b/index.html
@@ -1,102 +1,111 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
-    <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
-    <title>Седона</title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
+  <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
+  <title>Седона</title>
+</head>
+<body>
   <header class="main-header">
-    <a class="main-header-logo">
-      <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
-    </a>
     <nav class="main-navigation">
-            <ul class="site-navigation">
-              <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
-              <li><a href="news.html">ФОТО И ВИДЕО</a></li>
-              <li><a href="price.html">КАРТА ШТАТА</a></li>
-              <li><a href="catalog.html">ГОСТИНИЦЫ</a></li>
-            </ul>
-          </nav>
+      <ul class="site-navigation">
+        <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
+        <li><a href="news.html">ФОТО И ВИДЕО</a></li>
+        <li><a href="price.html">КАРТА ШТАТА</a></li>
+        <li><a href="hotels.html">ГОСТИНИЦЫ</a></li>
+      </ul>
+    </nav>
   </header>
-<article>
-<h1> СЕДОНА </h1>
-<p><b> СЕДОНА— небольшой городок в АРИЗОНЕ,
-зАСЛУЖИвающий большего!</b></p>
-</article>
-
-<h2>Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!<h2>
-
-<section class="advantage-item">
-  <div class="item-content town">
-    <h3 class="caption">НАСТОЯЩИЙ ГОРОДОК</h3>
-    <span>— №1 —</span>
-    <p>СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
-  </div>
-  <img. scr="img/town.jpg" alt="Настоящий городок" width="800" height="256">
-</section>
-
-<section class="advantage-service">
-<ul>
-  <li class "service-item housing">
-    <h3>Жилье</h3>
-    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!<p>
-  </li>
-  <li class "service-item food">
-    <h3>Еда</h3>
-    <p>Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!<p>
-  </li>
-  <li class "service-item souvenir">
-    <h3>Сувениры</h3>
-    <p>Не только китайского, но и местного производства!<p>
-  </li>
-</ul>
-</section>
-
-<section class="advantage-item">
-  <img. scr="img/bridge.jpg" alt="Мост дьявола" width="800" height="256">
-  <div class="item-content bridge">
-    <h3 class="caption">ТАМ ЕСТЬ Мост дьявола</h3>
-    <span>— №2 —</span>
-    <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-  </div>
-</section>
-
-<section class="advantage-item-2">
-  <ul>
-    <li class "item-content square">
+  <main class="container">
+    <section class="welcome">
+      <img src="img/welcome.jpg" width="1200" height="508" alt="Главный банер">
+      <h1 class="visually-hidden"> СЕДОНА </h1>
+      <p class="welcome-title">СЕДОНА— небольшой городок в АРИЗОНЕ,зАСЛУЖИвающий большего!</p>
+      <p class="welcome-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+    </section>
+    <section class="advantage">
+      <div class="advantage-blue">
+        <h3>НАСТОЯЩИЙ ГОРОДОК</h3>
+        <span>— №1 —</span>
+        <p>СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+      </div>
+      <img src="img/town.jpg" width="800" height="256" alt="Настоящий городок">
+   </section>
+   <section class="services">
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul>
+        <li class="services-item housing">
+          <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!<p>
+        </li>
+        <li class="services-item food">
+          <h3>Еда</h3>
+          <p>Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!<p>
+        </li>
+        <li class="services-item souvenir">
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!<p>
+        </li>
+      </ul>
+   </section>
+  <section class="advantage">
+    <img src="img/bridge.jpg" width="800" height="256" alt="Мост дьявола">
+    <div class="advantage-blue">
+      <h3>ТАМ ЕСТЬ Мост дьявола</h3>
+      <span>— №2 —</span>
+      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+    </div>
+  </section>
+  <section class="advantage">
+    <div class="advantage-grey">
       <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
       <span>— №3 —</span>
       <p>ВСЕ достопримечательности находятся очень близко<p>
-    </li>
-    <li class "item-content road">
+    </div>
+    <div class="advantage-grey">
       <h3>КРАСИВАЯ ДОРОГА</h3>
       <span>— №4 —</span>
       <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!<p>
-    </li>
-    <li class "item-content road">
+    </div>
+    <div class="advantage-grey">
       <h3>МАЛО ТУРИСТОВ</h3>
       <span>— №5 —</span>
       <p>Большинство едет в гранд каньон и толпится там<p>
+    </div>
+  </section>
+  <section class="appointment">
+    <h2>Заинтересовались?</h2>
+    <p class="appointment-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+    <button class="btn btn-brown">Поиск гостиницы в Седоне</button>
+    <!-- Здесь будет форма -->
+    <div class="map"></div>
+  </section>
+</main>
+<footer class="main-footer">
+  <p class="footer-hashteg">#visitSEDONA</p>
+  <ul class="footer-social">
+    <li>
+      <a class="social-button" href="#">
+        <img src="img/twitter.svg" width="" height="" alt="Твиттер">
+      </a>
     </li>
-  </ul>
-</section>
-
-
-<section class="appointment">
-        <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-        <!-- Здесь будет форма -->
-      </section>
-
-      <section class="appointment">
-              <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-              <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-              <!-- Здесь будет форма -->
-            </section>
-
-<footer>
-
+    <li>
+      <a class="social-button" href="#">
+          <img src="img/fb-icon.svg" width="" height="" alt="Фейсбук">
+      </a>
+    </li>
+    <li>
+      <a class="social-button" href="#">
+            <img src="img/youtube.svg" width="" height="" alt="Ютюб">
+      </a>
+    </li>
+ </ul>
+ <p class="footer-copyright">
+    <b>WEBSITE by</b>
+    <a href="https://htmlacademy.ru">
+      <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+    </a>
+ </p>
 </footer>
 </body>
