--- a/hotels.html
+++ b/hotels.html
@@ -20,67 +20,119 @@
             </ul>
           </nav>
   </header>
-
-
-  <section class="filters">
-        <h2 class="visually-hidden">Фильтр гостиниц</h2>
-        <!-- Здесь будет форма -->
-      </section>
-      <section class="sorting">
-
-      </section>
-      <section class="hotel">
-          <img src="img/product-1.jpg" width="220" height="165" alt="Amara Resort & Spa»">
-          <div class="hotel-description">
-            <a class="catalog-category" href="#">
-              <h3>Amara Resort & Spa</h3>
-            </a>
-            <div>
-              <span>Гостиница</span>
-              <a class="btn btn-blue" href="#">Подробнее</a>
-            </div>
-            <div>
-              <span>ОТ 4000 Р.</span>
-              <a class="btn btn-brown" href="#">Забронировать</a>
-            </div>
-         </div>
-         <div class="hotel-rating">
-           <span class="hotel-stars"></span>
-           <p>Рейтинг: 8,5<p>
-         </div>
-        </section>
-
-
-
-
-        </ul>
-      </section>
-
-
-<main>
-  <h1 class="visually-hidden">Гостиницы</h1>
+  <!-- Filters -->
+  <section class="filter">
+    <h2 class="visually-hidden">Фильтр гостиниц</h2>
+    <div class="filter-title">
+      <h3>Инфраструктура</h3>
+      <!-- Здесь будет форма -->
+    </div>
+    <div class="filter-title">
+      <h3>Тип жилья</h3>
+      <!-- Здесь будет форма -->
+    </div>
+    <div class="filter-title">
+      <h3>Стоимость в сутки (р)</h3>
+      <!-- Здесь будет форма -->
+      <a class="btn-transparent">Показать</a>
+    </div>
+  </section>
+<!-- Filters -->
+<!-- Sorting -->
+  <section class="sorting">
+      <span>Найдено:<span>3</span></span>
+    <div class="sorting-result">
+      <span>Сортировка:</span>
+    <div class="sort-variant-block"><a>По цене</a></div>
+    <div class="sort-variant-block"><a href="#">По типу</a></div>
+    <div class="sort-variant-block"><a href="#">По рейтингу</a></div>
+    </div>
+ </section>
+!-- Sorting -->
+ <section class="stars">
+    <span class="stars star-4"></span>
+      <p class="raiting">Рейтинг: 8,5</p>
+    <span class="stars star-3"></span>
+      <p class="raiting">Рейтинг: 8,9</p>
+    <span class="stars star-2"></span>
+      <p class="raiting">Рейтинг: 9,2</p>
+    </div>
+ </section>
+<!-- Hotels -->
+ <main>
+ <section class="hotel">
+ <h1 class="visually-hidden">Гостиницы</h1>
+<!-- Amara Resort & Spa -->
+    <img src="Amara.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <div class="hotel-description">
+      <a class="catalog-category" href="#">
+        <h3>Amara Resort & Spa</h3>
+      </a>
+    </div>
+    <div>
+      <span>Гостиница</span>
+      <a class="btn btn-blue" href="#">Подробнее</a>
+    </div>
+    <div>
+      <span>от 4000 р.</span>
+      <a class="btn btn-brown" href="#">Забронировать</a>
+    </div>
+    <!-- Desert Quail Inn -->
+    <img src="img/Desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <div class="hotel-description">
+      <a class="catalog-category" href="#">
+        <h3>Desert Quail Inn</h3>
+      </a>
+    </div>
+    <div>
+      <span>Мотель</span>
+      <a class="btn btn-blue" href="#">Подробнее</a>
+    </div>
+    <div>
+      <span>от 3000 р.</span>
+      <a class="btn btn-brown" href="#">Забронировать</a>
+    </div>
+    <!-- Villas at Poco Diablo -->
+    <img src="img/Villas.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <div class="hotel-description">
+      <a class="catalog-category" href="#">
+        <h3>Villas at Poco Diablo</h3>
+      </a>
+    </div>
+    <div>
+      <span>Апартаменты</span>
+      <a class="btn btn-blue" href="#">Подробнее</a>
+    </div>
+    <div>
+      <span>от 2000 р.</span>
+      <a class="btn btn-brown" href="#">Забронировать</a>
+    </div>
+ </section>
 </main>
-
-<footer class="main-footer">
-<p class="footer-hashteg"><b>#visitSEDONA</b</p>
-<div class="footer-social">
-  <ul>
-  <li><a class="social-button" href="#"">
-      <img src="img/twitter.svg" width="" height="" alt="Твиттер">
-    </a></li>
-  <li><a class="social-button" href="#"">
-        <img src="img/fb-icon.svg" width="" height="" alt="Фейсбук">
-    </a></li>
-  <li><a class="social-button" href="#"">
-          <img src="img/youtube.svg" width="" height="" alt="Ютюб">
-    </a></li>
-</ul>
-</div>
-<p class="footer-copyright">
-        <b>WEBSITE by</b>
-        <a href="https://htmlacademy.ru>
-          <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+  <footer class="main-footer">
+    <p class="footer-hashteg">#visitSEDONA</p>
+    <ul class="footer-social">
+      <li>
+        <a class="social-button" href="#">
+          <img src="img/twitter.svg" width="" height="" alt="Твиттер">
         </a>
-      </p>
-</footer>
-</body>
+      </li>
+      <li>
+        <a class="social-button" href="#">
+            <img src="img/fb-icon.svg" width="" height="" alt="Фейсбук">
+        </a>
+      </li>
+      <li>
+        <a class="social-button" href="#">
+              <img src="img/youtube.svg" width="" height="" alt="Ютюб">
+        </a>
+      </li>
+   </ul>
+   <p class="footer-copyright">
+      <b>WEBSITE by</b>
+      <a href="https://htmlacademy.ru">
+        <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+      </a>
+   </p>
+  </footer>
+  </body>
