Завершение разметки 2 попытка)

--- a/hotels.html
+++ b/hotels.html
@@ -1,114 +1,117 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
-    <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
-    <title>Седона</title>
-  </head>
-  <body>
+<html lang="ru"><head>
+  <meta charset="utf-8">
+  <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
+  <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
+  <title>Седона</title>
+</head><body>
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
         <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
       </a>
-            <ul class="site-navigation">
-              <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
-              <li><a href="news.html">ФОТО И ВИДЕО</a></li>
-              <li><a href="price.html">КАРТА ШТАТА</a></li>
-              <li><a class="site-navigation-current">ГОСТИНИЦЫ</a></li>
-            </ul>
-          </nav>
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="news.html">Фото и видео</a></li>
+        <li><a href="price.html">Карта штата</a></li>
+        <li><a class="site-navigation-current">Гостиницы</a></li>
+      </ul>
+    </nav>
   </header>
-  <!-- Filters -->
-  <section class="filter">
-    <h2 class="visually-hidden">Фильтр гостиниц</h2>
-    <div class="filter-title">
-      <h3>Инфраструктура</h3>
-      <!-- Здесь будет форма -->
-    </div>
-    <div class="filter-title">
-      <h3>Тип жилья</h3>
-      <!-- Здесь будет форма -->
-    </div>
-    <div class="filter-title">
-      <h3>Стоимость в сутки (р)</h3>
-      <!-- Здесь будет форма -->
-      <a class="btn-transparent">Показать</a>
-    </div>
-  </section>
-<!-- Filters -->
-<!-- Sorting -->
-  <section class="sorting">
+  <main>
+    <!-- Filters -->
+    <section class="filter">
+      <h2 class="visually-hidden">Фильтр гостиниц</h2>
+      <div class="filter-title">
+        <h3>Инфраструктура</h3>
+        <!-- Здесь будет форма -->
+      </div>
+      <div class="filter-title">
+        <h3>Тип жилья</h3>
+        <!-- Здесь будет форма -->
+      </div>
+      <div class="filter-title">
+        <h3>Стоимость в сутки (р)</h3>
+        <!-- Здесь будет форма -->
+        <a class="btn-transparent">Показать</a>
+      </div>
+    </section>
+    <!-- Sorting -->
+    <section class="sorting">
       <span>Найдено:<span>3</span></span>
-    <div class="sorting-result">
-      <span>Сортировка:</span>
-    <div class="sort-variant-block"><a>По цене</a></div>
-    <div class="sort-variant-block"><a href="#">По типу</a></div>
-    <div class="sort-variant-block"><a href="#">По рейтингу</a></div>
-    </div>
- </section>
-!-- Sorting -->
- <section class="stars">
-    <span class="stars star-4"></span>
-      <p class="raiting">Рейтинг: 8,5</p>
-    <span class="stars star-3"></span>
-      <p class="raiting">Рейтинг: 8,9</p>
-    <span class="stars star-2"></span>
-      <p class="raiting">Рейтинг: 9,2</p>
-    </div>
- </section>
-<!-- Hotels -->
- <main>
- <section class="hotel">
- <h1 class="visually-hidden">Гостиницы</h1>
-<!-- Amara Resort & Spa -->
-    <img src="Amara.jpg" width="220" height="165" alt="Amara Resort & Spa»">
-    <div class="hotel-description">
-      <a class="catalog-category" href="#">
-        <h3>Amara Resort & Spa</h3>
-      </a>
-    </div>
-    <div>
-      <span>Гостиница</span>
-      <a class="btn btn-blue" href="#">Подробнее</a>
-    </div>
-    <div>
-      <span>от 4000 р.</span>
-      <a class="btn btn-brown" href="#">Забронировать</a>
-    </div>
+      <h2 class="visually-hidden">Сортировка гостиниц</h2>
+      <div class="sorting-result">
+        <span>Сортировка:</span>
+        <div class="sort-variant-block"><a>По цене</a></div>
+        <div class="sort-variant-block"><a href="#">По типу</a></div>
+        <div class="sort-variant-block"><a href="#">По рейтингу</a></div>
+      </div>
+    </section>
+    <!-- Hotels -->
+    <section class="hotel">
+      <!-- Amara Resort & Spa -->
+      <img src="img/amara.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+      <div class="hotel-description">
+        <a class="catalog-category" href="#">
+          <h3>Amara Resort & Spa</h3>
+        </a>
+        <div>
+          <span>Гостиница</span>
+          <a class="btn btn-blue" href="#">Подробнее</a>
+        </div>
+        <div>
+          <span>от 4000 р.</span>
+          <a class="btn btn-brown" href="#">Забронировать</a>
+        </div>
+      </div>
+      <div class="raiting">
+        <span class="raiting-stars raiting-stars-4"></span>
+        <p class="raiting-points">Рейтинг: 8,5</p>
+      </div>
+    </section>
     <!-- Desert Quail Inn -->
-    <img src="img/Desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <section class="hotel">
+    <img src="img/desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
     <div class="hotel-description">
       <a class="catalog-category" href="#">
         <h3>Desert Quail Inn</h3>
       </a>
+      <div>
+        <span>Мотель</span>
+        <a class="btn btn-blue" href="#">Подробнее</a>
+      </div>
+      <div>
+        <span>от 3000 р.</span>
+        <a class="btn btn-brown" href="#">Забронировать</a>
+      </div>
     </div>
-    <div>
-      <span>Мотель</span>
-      <a class="btn btn-blue" href="#">Подробнее</a>
+    <div class="raiting">
+      <span class="raiting-stars raiting-stars-3"></span>
+      <p class="raiting-points">Рейтинг: 8,9</p>
     </div>
-    <div>
-      <span>от 3000 р.</span>
-      <a class="btn btn-brown" href="#">Забронировать</a>
-    </div>
+    </section>
     <!-- Villas at Poco Diablo -->
-    <img src="img/Villas.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <section class="hotel">
+    <img src="img/villas.jpg" width="220" height="165" alt="Amara Resort & Spa»">
     <div class="hotel-description">
       <a class="catalog-category" href="#">
         <h3>Villas at Poco Diablo</h3>
       </a>
+      <div>
+        <span>Апартаменты</span>
+        <a class="btn btn-blue" href="#">Подробнее</a>
+      </div>
+      <div>
+        <span>от 2000 р.</span>
+        <a class="btn btn-brown" href="#">Забронировать</a>
+      </div>
     </div>
-    <div>
-      <span>Апартаменты</span>
-      <a class="btn btn-blue" href="#">Подробнее</a>
+    <div class="raiting">
+      <span class="raiting-stars raiting-stars-2"></span>
+      <p class="raiting-points">Рейтинг: 9,2</p>
     </div>
-    <div>
-      <span>от 2000 р.</span>
-      <a class="btn btn-brown" href="#">Забронировать</a>
-    </div>
- </section>
-</main>
+    </section>
+  </main>
   <footer class="main-footer">
     <p class="footer-hashteg">#visitSEDONA</p>
     <ul class="footer-social">
@@ -127,12 +130,12 @@
               <img src="img/youtube.svg" width="" height="" alt="Ютюб">
         </a>
       </li>
-   </ul>
-   <p class="footer-copyright">
+    </ul>
+    <p class="footer-copyright">
       <b>WEBSITE by</b>
       <a href="https://htmlacademy.ru">
         <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
       </a>
-   </p>
+    </p>
   </footer>
-  </body>
+</body>
