Завершение разметки 2 попытка

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   <header class="main-header">
     <nav class="main-navigation">
       <ul class="site-navigation">
-        <li><a href="info.html">ИНФОРМАЦИЯ</a></li>
-        <li><a href="news.html">ФОТО И ВИДЕО</a></li>
-        <li><a href="price.html">КАРТА ШТАТА</a></li>
-        <li><a href="hotels.html">ГОСТИНИЦЫ</a></li>
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="news.html">Фото и видео</a></li>
+        <li><a href="price.html">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
   <main class="container">
     <section class="welcome">
       <img src="img/welcome.jpg" width="1200" height="508" alt="Главный банер">
-      <h1 class="visually-hidden"> СЕДОНА </h1>
-      <p class="welcome-title">СЕДОНА— небольшой городок в АРИЗОНЕ,зАСЛУЖИвающий большего!</p>
+      <h1 class="visually-hidden">Седона</h1>
+      <p class="welcome-title">Седона— небольшой городок в Арионе,заслуживающий большего!</p>
       <p class="welcome-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
     </section>
     <section class="advantage">
       <div class="advantage-blue">
-        <h3>НАСТОЯЩИЙ ГОРОДОК</h3>
+        <h3>Настоящий городок</h3>
         <span>— №1 —</span>
-        <p>СЕДОНА — НЕ АТтРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
+        <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <img src="img/town.jpg" width="800" height="256" alt="Настоящий городок">
    </section>
@@ -41,7 +41,7 @@
         </li>
         <li class="services-item food">
           <h3>Еда</h3>
-          <p>Всегда заказывайте ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!<p>
+          <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!<p>
         </li>
         <li class="services-item souvenir">
           <h3>Сувениры</h3>
@@ -52,24 +52,24 @@
   <section class="advantage">
     <img src="img/bridge.jpg" width="800" height="256" alt="Мост дьявола">
     <div class="advantage-blue">
-      <h3>ТАМ ЕСТЬ Мост дьявола</h3>
+      <h3>Там есть Мост дьявола</h3>
       <span>— №2 —</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
     </div>
   </section>
   <section class="advantage">
     <div class="advantage-grey">
-      <h3>НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+      <h3>Небольшая площадь</h3>
       <span>— №3 —</span>
-      <p>ВСЕ достопримечательности находятся очень близко<p>
+      <p>Все достопримечательности находятся очень близко<p>
     </div>
     <div class="advantage-grey">
-      <h3>КРАСИВАЯ ДОРОГА</h3>
+      <h3>Красивая дорога</h3>
       <span>— №4 —</span>
-      <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА совсем НЕ СКУЧНО!<p>
+      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!<p>
     </div>
     <div class="advantage-grey">
-      <h3>МАЛО ТУРИСТОВ</h3>
+      <h3>Мало туристов</h3>
       <span>— №5 —</span>
       <p>Большинство едет в гранд каньон и толпится там<p>
     </div>
