--- a/hotels.html
+++ b/hotels.html
@@ -50,7 +50,7 @@
     <!-- Hotels -->
     <section class="hotel">
       <!-- Amara Resort & Spa -->
-      <img src="img/amara.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+      <img src="img/hotel/amara.jpg" width="220" height="165" alt="Amara Resort & Spa»">
       <div class="hotel-description">
         <a class="catalog-category" href="#">
           <h3>Amara Resort & Spa</h3>
@@ -71,7 +71,7 @@
     </section>
     <!-- Desert Quail Inn -->
     <section class="hotel">
-    <img src="img/desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <img src="img/hotel/desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
     <div class="hotel-description">
       <a class="catalog-category" href="#">
         <h3>Desert Quail Inn</h3>
@@ -92,7 +92,7 @@
     </section>
     <!-- Villas at Poco Diablo -->
     <section class="hotel">
-    <img src="img/villas.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+    <img src="img/hotel/villas.jpg" width="220" height="165" alt="Amara Resort & Spa»">
     <div class="hotel-description">
       <a class="catalog-category" href="#">
         <h3>Villas at Poco Diablo</h3>
@@ -117,24 +117,24 @@
     <ul class="footer-social">
       <li>
         <a class="social-button" href="#">
-          <img src="img/twitter.svg" width="" height="" alt="Твиттер">
+          <img src="img/svg/twitter.svg" width="" height="" alt="Твиттер">
         </a>
       </li>
       <li>
         <a class="social-button" href="#">
-            <img src="img/fb-icon.svg" width="" height="" alt="Фейсбук">
+            <img src="img/svg/fb-icon.svg" width="" height="" alt="Фейсбук">
         </a>
       </li>
       <li>
         <a class="social-button" href="#">
-              <img src="img/youtube.svg" width="" height="" alt="Ютюб">
+              <img src="img/svg/youtube.svg" width="" height="" alt="Ютюб">
         </a>
       </li>
     </ul>
     <p class="footer-copyright">
       <b>WEBSITE by</b>
       <a href="https://htmlacademy.ru">
-        <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+        <img src="img/svg/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
       </a>
     </p>
   </footer>
