--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <span>— №1 —</span>
         <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
       </div>
-      <img src="img/town.jpg" width="800" height="256" alt="Настоящий городок">
+      <img src="img/index/town.jpg" width="800" height="256" alt="Настоящий городок">
    </section>
    <section class="services">
       <h2 class="visually-hidden">Услуги</h2>
@@ -50,7 +50,7 @@
       </ul>
    </section>
   <section class="advantage">
-    <img src="img/bridge.jpg" width="800" height="256" alt="Мост дьявола">
+    <img src="img/index/bridge.jpg" width="800" height="256" alt="Мост дьявола">
     <div class="advantage-blue">
       <h3>Там есть Мост дьявола</h3>
       <span>— №2 —</span>
@@ -87,24 +87,24 @@
   <ul class="footer-social">
     <li>
       <a class="social-button" href="#">
-        <img src="img/twitter.svg" width="" height="" alt="Твиттер">
+        <img src="img/svg/twitter.svg" width="" height="" alt="Твиттер">
       </a>
     </li>
     <li>
       <a class="social-button" href="#">
-          <img src="img/fb-icon.svg" width="" height="" alt="Фейсбук">
+          <img src="img/svg/fb-icon.svg" width="" height="" alt="Фейсбук">
       </a>
     </li>
     <li>
       <a class="social-button" href="#">
-            <img src="img/youtube.svg" width="" height="" alt="Ютюб">
+            <img src="img/svg/youtube.svg" width="" height="" alt="Ютюб">
       </a>
     </li>
  </ul>
  <p class="footer-copyright">
     <b>WEBSITE by</b>
     <a href="https://htmlacademy.ru">
-      <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+      <img src="img/svg/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
     </a>
  </p>
 </footer>
