--- a/hotels.html
+++ b/hotels.html
@@ -22,19 +22,41 @@
     <!-- Filters -->
     <section class="filter">
       <h2 class="visually-hidden">Фильтр гостиниц</h2>
-      <div class="filter-title">
-        <h3>Инфраструктура</h3>
-        <!-- Здесь будет форма -->
-      </div>
-      <div class="filter-title">
-        <h3>Тип жилья</h3>
-        <!-- Здесь будет форма -->
-      </div>
-      <div class="filter-title">
-        <h3>Стоимость в сутки (р)</h3>
-        <!-- Здесь будет форма -->
-        <a class="btn-transparent">Показать</a>
-      </div>
+      <form class="filter-form" action="#" method="get">
+        <div class="filter-field infrastructure">
+           <div class="filter-title">Инфраструктура:</div>
+           <input id="pool" type="checkbox" name="infrastructure" value="pool" checked>
+  					<label for="pool">Бассейн</label>
+  					<input id="parking" type="checkbox" name="infrastructure" value="parking" disabled>
+  					<label for="parking">Парковка</label>
+  					<input id="wi-fi" type="checkbox" name="infrastructure" value="wi-fi">
+  					<label for="wi-fi">Wi-Fi</label>
+        </div>
+        <div class="filter-field housing">
+        <div class="filter-title">Тип жилья:</div>
+        <input id="hotel" type="checkbox" name="housing" value="hotel" checked>
+        <label for="hotel">Гостиница</label>
+        <input id="motel" type="checkbox" name="housing" value="motel" checked>
+        <label for="motel">Мотель</label>
+        <input id="apartments" type="checkbox" name="housing" value="apartments" checked>
+        <label for="apartments">Апартаменты</label>
+       </div>
+       <div class="filter-field price">
+         <div class="filter-range-title">Стоимость в сутки (р):</div>
+         <div class="price-controls">
+           <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+           <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+         </div>
+         <div class="range-controls">
+           <div class="scale">
+             <div class="bar"></div>
+           </div>
+           <div class="range-toggle range-toggle-min"></div>
+           <div class="range-toggle range-toggle-max"></div>
+         </div>
+         <a class="btn-transparent">Показать</a>
+       </div>
+    </form>
     </section>
     <!-- Sorting -->
     <section class="sorting">
