--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="utf-8">
   <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
   <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
   <title>Седона</title>
 </head>
+
 <body>
   <header class="main-header">
     <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
+      </a>
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="news.html">Фото и видео</a></li>
@@ -19,7 +24,7 @@
   </header>
   <main class="container">
     <section class="welcome">
-      <img src="img/welcome.jpg" width="1200" height="508" alt="Главный банер">
+      <img src="img/index/welcome.jpg" width="1200" height="508" alt="Добро пожаловать в Седону!">
       <h1 class="visually-hidden">Седона</h1>
       <p class="welcome-title">Седона— небольшой городок в Арионе,заслуживающий большего!</p>
       <p class="welcome-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
@@ -30,82 +35,124 @@
         <span>— №1 —</span>
         <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
       </div>
-      <img src="img/town.jpg" width="800" height="256" alt="Настоящий городок">
-   </section>
-   <section class="services">
+      <img src="img/index/town.jpg" width="800" height="256" alt="Настоящий городок">
+    </section>
+    <section class="services">
       <h2 class="visually-hidden">Услуги</h2>
       <ul>
         <li class="services-item housing">
           <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!<p>
+          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!
+            <p>
         </li>
         <li class="services-item food">
           <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!<p>
+          <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!
+            <p>
         </li>
         <li class="services-item souvenir">
           <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!<p>
+          <p>Не только китайского, но и местного производства!
+            <p>
         </li>
       </ul>
-   </section>
-  <section class="advantage">
-    <img src="img/bridge.jpg" width="800" height="256" alt="Мост дьявола">
-    <div class="advantage-blue">
-      <h3>Там есть Мост дьявола</h3>
-      <span>— №2 —</span>
-      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-    </div>
-  </section>
-  <section class="advantage">
-    <div class="advantage-grey">
-      <h3>Небольшая площадь</h3>
-      <span>— №3 —</span>
-      <p>Все достопримечательности находятся очень близко<p>
-    </div>
-    <div class="advantage-grey">
-      <h3>Красивая дорога</h3>
-      <span>— №4 —</span>
-      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!<p>
-    </div>
-    <div class="advantage-grey">
-      <h3>Мало туристов</h3>
-      <span>— №5 —</span>
-      <p>Большинство едет в гранд каньон и толпится там<p>
-    </div>
-  </section>
-  <section class="appointment">
-    <h2>Заинтересовались?</h2>
-    <p class="appointment-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-    <button class="btn btn-brown">Поиск гостиницы в Седоне</button>
-    <!-- Здесь будет форма -->
-    <div class="map"></div>
-  </section>
-</main>
-<footer class="main-footer">
-  <p class="footer-hashteg">#visitSEDONA</p>
-  <ul class="footer-social">
-    <li>
-      <a class="social-button" href="#">
-        <img src="img/twitter.svg" width="" height="" alt="Твиттер">
+    </section>
+    <section class="advantage">
+      <img src="img/index/bridge.jpg" width="800" height="256" alt="Мост дьявола">
+      <div class="advantage-blue">
+        <h3>Там есть Мост дьявола</h3>
+        <span>— №2 —</span>
+        <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </div>
+    </section>
+    <section class="advantage">
+      <div class="advantage-grey">
+        <h3>Небольшая площадь</h3>
+        <span>— №3 —</span>
+        <p>Все достопримечательности находятся очень близко
+          <p>
+      </div>
+      <div class="advantage-grey">
+        <h3>Красивая дорога</h3>
+        <span>— №4 —</span>
+        <p>Ехать в Седону из Лас-Вегаса совсем не скучно!
+          <p>
+      </div>
+      <div class="advantage-grey">
+        <h3>Мало туристов</h3>
+        <span>— №5 —</span>
+        <p>Большинство едет в гранд каньон и толпится там
+          <p>
+      </div>
+    </section>
+    <section class="appointment">
+      <h2>Заинтересовались?</h2>
+      <p class="appointment-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <button class="btn btn-brown">Поиск гостиницы в Седоне</button>
+      <!-- Здесь будет форма -->
+      <form id="booking_form" class="booking-form" action="#" method="get">
+        <div class="text-row">
+          <label for="checkin">Дата заезда:</label>
+          <div class="calendar form-grey">
+            <input id="checkin" type="text" name="checkin" placeholder="24 апреля 2016">
+          </div>
+        </div>
+        <div class="text-row">
+          <label for="checkout">Дата выезда:</label>
+          <div class="calendar form-grey">
+            <input id="checkout" type="text" name="checkout" placeholder="4 июля 2016">
+          </div>
+        </div>
+        <div class="text-row">
+          <label for="adults">Взрослые:</label>
+          <div class="person-amount">
+            <button class="btn btn-amount amount-minus" type="button"></button>
+            <input id="adults" type="text" name="adults" placeholder="2" class="text-center">
+            <button class="btn btn-amount amount-plus" type="button"></button>
+          </div>
+        </div>
+        <div class="text-row">
+          <label for="kids">Дети:</label>
+          <div class="person-amount">
+            <button class="btn btn-amount amount-minus" type="button"></button>
+            <input id="kids" type="text" name="kids" placeholder="0" class="text-center">
+            <button class="btn btn-amount amount-plus" type="button"></button>
+          </div>
+        </div>
+        <!-- Кнопка найти -->
+        <div class="btn btn-blue">
+          <input type="button" value="Найти">
+        </div>
+      </form>
+      <div class="map">
+        <img src="img/index/map.jpg" width="1200" height="593" alt="Карта">
+      </div>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <p class="footer-hashteg">#visitSEDONA</p>
+    <ul class="footer-social">
+      <li>
+        <a class="social-button" href="#">
+        <img src="img/svg/twitter.svg" width="" height="" alt="Твиттер">
       </a>
-    </li>
-    <li>
-      <a class="social-button" href="#">
-          <img src="img/fb-icon.svg" width="" height="" alt="Фейсбук">
+      </li>
+      <li>
+        <a class="social-button" href="#">
+          <img src="img/svg/fb-icon.svg" width="" height="" alt="Фейсбук">
       </a>
-    </li>
-    <li>
-      <a class="social-button" href="#">
-            <img src="img/youtube.svg" width="" height="" alt="Ютюб">
+      </li>
+      <li>
+        <a class="social-button" href="#">
+            <img src="img/svg/youtube.svg" width="" height="" alt="Ютюб">
       </a>
-    </li>
- </ul>
- <p class="footer-copyright">
-    <b>WEBSITE by</b>
-    <a href="https://htmlacademy.ru">
-      <img src="img/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+      </li>
+    </ul>
+    <p class="footer-copyright">
+      <b>WEBSITE by</b>
+      <a href="https://htmlacademy.ru">
+      <img src="img/svg/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
     </a>
- </p>
-</footer>
+    </p>
+  </footer>
 </body>
